src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_confirm_cancel.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 897
expression: buffer_to_string(&terminal)
---
                                                            
                                                            
                                                            
                                                            
               ╭  Cancel Query  ────────────╮               
               ╰────────────────────────────╯
