src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_confirm_cancel_batch.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                  ╭  Cancel Queries  ────────────────────────╮                  
                  │                                          │                  
                  │  Cancel 3 queries?                       │                  
                  │                                          │                  
                  │  PIDs: 12345, 12346, 12347               │                  
                  │                                          │                  
                  ╰──────────────────────────────────────────╯
