src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_confirm_cancel_batch_many.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                  ╭  Cancel Queries  ────────────────────────╮                  
                  │                                          │                  
                  │  Cancel 15 queries?                      │                  
                  │                                          │                  
                  │  PIDs: 12341, 12342, 12343, 12344, 12345,│                  
                  │                                          │                  
                  ╰──────────────────────────────────────────╯
