src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_confirm_kill.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 909
expression: buffer_to_string(&terminal)
---
                                                            
                                                            
                                                            
                                                            
               ╭  Terminate Backend  ───────╮               
               ╰────────────────────────────╯
