src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_confirm_kill_batch.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                  ╭  Terminate Backends  ────────────────────╮                  
                  │                                          │                  
                  │  Terminate 3 backends?                   │                  
                  │                                          │                  
                  │  PIDs: 12345, 12346, 12347               │                  
                  │                                          │                  
                  │  ⚠ This will kill the connections entirel│                  
                  ╰──────────────────────────────────────────╯
