src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_help.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 871
expression: buffer_to_string(&terminal)
---
                                                                                          
                                                                                          
                                                                                          
                                                                                          
              ╭  Keybindings  [j/k] scroll  [Esc] close  ───────────────────╮             
              │                                                             │             
              │  Navigation ────────────────────────────────────────        │             
              │    q           Back to queries / quit                       │             
              │    Ctrl+C      Force quit                                   │             
              │    p           Pause / resume refresh                       │             
              │    r           Force refresh now                            │             
              │    ?           This help screen                             │             
              │    ,           Configuration                                │             
              │                                                             │             
              │  Panels ────────────────────────────────────────            │             
              │    Q           Queries (active)                             │             
              │    Tab         Blocking chains                              │             
              │    w           Wait events                                  │             
              │    t           Table stats                                  │             
              │    R           Replication (lag, slots, subs)               │             
              │    v           Vacuum progress                              │             
              │    x           Transaction wraparound                       │             
              │    I           Index stats                                  │             
              │    S           pg_stat_statements                           │             
              │    A           WAL & I/O stats                              │             
              │    P           PostgreSQL settings                          │             
              │                                                             │             
              │  Panel Controls ────────────────────────────────────────    │             
              │    Esc         Back to queries (or quit)                    │             
              │    ↑ / k       Select previous row                          │             
              │    ↓ / j       Select next row                              │             
              ╰─────────────────────────────────────────────────────────────╯
