src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_index_inspect.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
            ╭ 📑  Index Details  [j/k] scroll  [y] copy definition  [Esc] close ───────╮             
            │                                                                         │             
            │  Index Info ────────────────────────────────────────                    │             
            │  Schema:      public     Table: orders                                  │             
            │  Index:       orders_pkey                                               │             
            │  Size:        50.0 MB                                                   │             
            │                                                                         │             
            │  Usage Stats ────────────────────────────────────────                   │             
            │  Scans:        50000                                                    │             
            │  Tup Read:    50000     Tup Fetch: 49500                                │             
            │                                                                         │             
            │  Definition ────────────────────────────────────────                    │             
            │  CREATE UNIQUE INDEX orders_pkey ON public.orders USING btree (id)      │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            ╰─────────────────────────────────────────────────────────────────────────╯
