src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_query_inspect.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
               ╭  Query Details  [j/k] scroll  [y] copy query  [C] cancel  [K] kill ╮               
               │                                                                    │               
               │  Connection ────────────────────────────────────────               │               
               │  PID:       12345     User: app_user     DB: production            │               
               │  Backend:   client backend                                         │               
               │                                                                    │               
               │  Status ────────────────────────────────────────                   │               
               │  State:      active      Duration: 5.5s                            │               
               │  Wait:      IO / DataFileRead                                      │               
               │                                                                    │               
               │  Query ────────────────────────────────────────                    │               
               │  SELECT * FROM users WHERE id = $1                                 │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               ╰────────────────────────────────────────────────────────────────────╯
