src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_query_inspect_all_none_fields.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
               ╭ 🔍  Query Details  [j/k] scroll  [y] copy query  [C] cancel  [K] kil╮               
               │                                                                    │               
               │  Connection ────────────────────────────────────────               │               
               │  PID:       1     User: -     DB: -                                │               
               │  Backend:   -                                                      │               
               │                                                                    │               
               │  Status ────────────────────────────────────────                   │               
               │  State:      -      Duration: 0s                                   │               
               │  Wait:      - / -                                                  │               
               │                                                                    │               
               │  Query ────────────────────────────────────────                    │               
               │  <no query>                                                        │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               ╰────────────────────────────────────────────────────────────────────╯
