src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_query_inspect_ansi_escapes.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
               ╭  Query Details  [j/k] scroll  [y] copy query  [C] cancel  [K] kill ╮               
               │                                                                    │               
               │  Connection ────────────────────────────────────────               │               
               │  PID:       3     User: user     DB: db                            │               
               │  Backend:   client backend                                         │               
               │                                                                    │               
               │  Status ────────────────────────────────────────                   │               
               │  State:      active      Duration: 1.0s                            │               
               │  Wait:      - / -                                                  │               
               │                                                                    │               
               │  Query ────────────────────────────────────────                    │               
               │  SELECT '[31mRED[0m' AS color                                      │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               ╰────────────────────────────────────────────────────────────────────╯
